[gd_scene load_steps=28 format=3 uid="uid://c1n8xrti8afpc"]

[ext_resource type="Script" path="res://objects/player/player.gd" id="1_oa43o"]
[ext_resource type="Script" path="res://addons/finite_state_machine/scripts/finite_state_machine.gd" id="2_p4q1k"]
[ext_resource type="Script" path="res://objects/player/head.gd" id="3_kj3jh"]
[ext_resource type="Script" path="res://objects/player/legs.gd" id="3_sof65"]
[ext_resource type="Script" path="res://objects/player/Climb.gd" id="4_2ehjw"]
[ext_resource type="Shader" path="res://materials/toon.gdshader" id="4_pe4gi"]
[ext_resource type="Script" path="res://objects/player/StateMachine/Idle.gd" id="5_6pvtv"]
[ext_resource type="Script" path="res://addons/shaker/src/Vector3/shaker_component3D.gd" id="5_s3t0l"]
[ext_resource type="Script" path="res://objects/player/StateMachine/Run.gd" id="6_q5vx6"]
[ext_resource type="Resource" uid="uid://dakufr1eoowxf" path="res://addons/shaker/data/resources/strong_shake3D.tres" id="6_wrkh5"]
[ext_resource type="Script" path="res://objects/player/StateMachine/Air.gd" id="7_q0tn7"]
[ext_resource type="Script" path="res://objects/player/StateMachine/Jump.gd" id="8_856fg"]
[ext_resource type="Script" path="res://objects/player/StateMachine/Crouch.gd" id="9_84rn1"]
[ext_resource type="PackedScene" uid="uid://cebrbw00uf83n" path="res://objects/gun/gun.tscn" id="12_8okjr"]
[ext_resource type="Script" path="res://objects/player/StateMachine/Mantle.gd" id="18_433q2"]

[sub_resource type="CapsuleShape3D" id="CapsuleShape3D_oyfeb"]
radius = 0.25
height = 1.9

[sub_resource type="CapsuleShape3D" id="CapsuleShape3D_p17bk"]
radius = 0.125
height = 0.3

[sub_resource type="CylinderShape3D" id="CylinderShape3D_rdl2t"]
height = 0.1
radius = 0.2

[sub_resource type="ShaderMaterial" id="ShaderMaterial_tm6mg"]
render_priority = 0
shader = ExtResource("4_pe4gi")
shader_parameter/outlineColor = Color(0.935198, 0.927595, 0.929488, 1)
shader_parameter/depth_threshold = 0.025
shader_parameter/normal_threshold = 0.5
shader_parameter/normal_smoothing = 0.087
shader_parameter/max_thickness = 2.0
shader_parameter/min_thickness = 0.5
shader_parameter/max_distance = 75.0
shader_parameter/min_distance = 2.0
shader_parameter/grazing_fresnel_power = 5.0
shader_parameter/grazing_angle_mask_power = 1.0
shader_parameter/grazing_angle_modulation_factor = 50.0

[sub_resource type="QuadMesh" id="QuadMesh_hdmj0"]
material = SubResource("ShaderMaterial_tm6mg")
flip_faces = true
size = Vector2(2, 2)

[sub_resource type="BoxShape3D" id="BoxShape3D_ckefi"]
size = Vector3(0.4, 1.6, 0.3)

[sub_resource type="SphereShape3D" id="SphereShape3D_eue55"]
radius = 0.25

[sub_resource type="CapsuleShape3D" id="CapsuleShape3D_5qlqq"]
radius = 0.248
height = 0.5

[sub_resource type="CylinderShape3D" id="CylinderShape3D_ofnkf"]
height = 0.5
radius = 0.35

[sub_resource type="CylinderShape3D" id="CylinderShape3D_u3y0t"]
height = 0.5
radius = 0.35

[sub_resource type="CylinderShape3D" id="CylinderShape3D_mkr1h"]
height = 0.8
radius = 0.45

[sub_resource type="LabelSettings" id="LabelSettings_mm6q2"]
font_size = 34
outline_size = 3
outline_color = Color(0, 0, 0, 1)

[node name="Player" type="CharacterBody3D" node_paths=PackedStringArray("legs", "head", "climb")]
collision_layer = 2
collision_mask = 9
script = ExtResource("1_oa43o")
legs = NodePath("Legs")
head = NodePath("Head")
climb = NodePath("Climb")
gravity = 17.0
jump_power = 6.21

[node name="StandCollision" type="CollisionShape3D" parent="."]
unique_name_in_owner = true
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1, 0)
shape = SubResource("CapsuleShape3D_oyfeb")

[node name="CrouchCollision" type="CollisionShape3D" parent="."]
unique_name_in_owner = true
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.202543, 0)
shape = SubResource("CapsuleShape3D_p17bk")
disabled = true

[node name="Head" type="Node3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.5, 0)
script = ExtResource("3_kj3jh")

[node name="HeadFreeSpaceCast" type="ShapeCast3D" parent="Head"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.250672, 0)
enabled = false
shape = SubResource("CylinderShape3D_rdl2t")
target_position = Vector3(0, 0.45, 0)

[node name="Camera" type="Camera3D" parent="Head"]
unique_name_in_owner = true
transform = Transform3D(1, -2.98024e-08, -7.91442e-09, 2.98024e-08, 1, 6.75203e-09, 7.91442e-09, -6.75203e-09, 1, -7.59028e-08, 2.69152e-07, 2.5332e-07)

[node name="Gun" parent="Head/Camera" instance=ExtResource("12_8okjr")]
transform = Transform3D(1, 0, 1.42109e-14, 0, 1, 0, -1.42109e-14, 0, 1, 0.304331, -0.219733, -0.464747)

[node name="MeshInstance3D" type="MeshInstance3D" parent="Head/Camera"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, -0.144857)
mesh = SubResource("QuadMesh_hdmj0")

[node name="ShakerComponent3D" type="Node3D" parent="Head/Camera"]
script = ExtResource("5_s3t0l")
intensity = 0.1
duration = 0.6
fade_in = 0.0796601
fade_out = 4.92458
shakerPreset = ExtResource("6_wrkh5")

[node name="Climb" type="Node3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.5, 0)
script = ExtResource("4_2ehjw")

[node name="ObstacleHeight" type="RayCast3D" parent="Climb"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.851986, -0.365159)
target_position = Vector3(0, -2, 0)
hit_back_faces = false
debug_shape_custom_color = Color(0.271951, 0.866286, 1, 1)

[node name="ObstacleObstr" type="RayCast3D" parent="Climb"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -0.162644, -0.291806)
target_position = Vector3(0, 0, -0.7)
debug_shape_custom_color = Color(0.271951, 0.866286, 1, 1)

[node name="ObstacleDetector" type="ShapeCast3D" parent="Climb"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -0.162644, -0.248098)
shape = SubResource("BoxShape3D_ckefi")
target_position = Vector3(0, 0, -0.25)
debug_shape_custom_color = Color(0.271951, 0.866286, 1, 1)

[node name="HeightSpringArm" type="SpringArm3D" parent="Climb"]
transform = Transform3D(1, -4.37114e-08, 4.37114e-08, 4.37114e-08, -4.37114e-08, -1, 4.37114e-08, 1, -4.37114e-08, 0, 1.26916, -0.412127)
shape = SubResource("SphereShape3D_eue55")
spring_length = 2.25

[node name="FreeSpaceContainer" type="Node3D" parent="Climb/HeightSpringArm"]

[node name="FreeSpaceStanding" type="ShapeCast3D" parent="Climb/HeightSpringArm/FreeSpaceContainer"]
unique_name_in_owner = true
transform = Transform3D(1, 4.37114e-08, 4.37114e-08, -4.37114e-08, -4.37114e-08, 1, 4.37114e-08, -1, -4.37114e-08, 9.06192e-08, 0.0152814, -0.91247)
shape = SubResource("CapsuleShape3D_oyfeb")
target_position = Vector3(0, 0, 0)
debug_shape_custom_color = Color(4.81308e-08, 0.668004, 0.481005, 1)

[node name="FreeSpaceCrouch" type="ShapeCast3D" parent="Climb/HeightSpringArm/FreeSpaceContainer"]
unique_name_in_owner = true
transform = Transform3D(1, 4.37114e-08, 4.37114e-08, -4.37114e-08, -4.37114e-08, 1, 4.37114e-08, -1, -4.37114e-08, 6.54852e-08, 0.0152815, -0.33747)
shape = SubResource("CapsuleShape3D_p17bk")
target_position = Vector3(0, 0, 0)
debug_shape_custom_color = Color(0.562039, 0.0039935, 0.972096, 1)

[node name="Legs" type="Node3D" parent="."]
script = ExtResource("3_sof65")

[node name="FloorCast" type="ShapeCast3D" parent="Legs"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.301, 0)
enabled = false
shape = SubResource("CapsuleShape3D_5qlqq")
target_position = Vector3(0, -0.68, 0)

[node name="FloorRay" type="RayCast3D" parent="Legs/FloorCast"]
enabled = false
target_position = Vector3(0, -0.45, 0)

[node name="StairsCast" type="ShapeCast3D" parent="Legs"]
transform = Transform3D(0.999996, 0, -0.00274016, 0, 1, 0, 0.00274016, 0, 0.999996, 0, 0.281829, 0)
enabled = false
shape = SubResource("CylinderShape3D_ofnkf")
target_position = Vector3(0, 0, 0)

[node name="StairsBeneath" type="ShapeCast3D" parent="Legs/StairsCast"]
enabled = false
shape = SubResource("CylinderShape3D_u3y0t")
target_position = Vector3(0, -0.5, 0)

[node name="FreeSpaceRayCast" type="RayCast3D" parent="Legs/StairsCast"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.3, 0)
enabled = false
target_position = Vector3(0, 0, -0.75)

[node name="StairsFloorRayCast" type="RayCast3D" parent="Legs/StairsCast"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.3, 0)
enabled = false

[node name="StairsNear" type="ShapeCast3D" parent="Legs/StairsCast"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -0.151852, 0)
enabled = false
shape = SubResource("CylinderShape3D_mkr1h")
target_position = Vector3(0, 0, 0)

[node name="FiniteStateMachine" type="Node" parent="." node_paths=PackedStringArray("current_state")]
unique_name_in_owner = true
script = ExtResource("2_p4q1k")
current_state = NodePath("Idle")

[node name="Idle" type="Node" parent="FiniteStateMachine"]
script = ExtResource("5_6pvtv")

[node name="Run" type="Node" parent="FiniteStateMachine"]
script = ExtResource("6_q5vx6")

[node name="Air" type="Node" parent="FiniteStateMachine"]
script = ExtResource("7_q0tn7")
can_jump_in_this_state = false

[node name="CoyoteTimer" type="Timer" parent="FiniteStateMachine/Air"]
process_callback = 0
wait_time = 0.3
one_shot = true

[node name="Jump" type="Node" parent="FiniteStateMachine"]
script = ExtResource("8_856fg")
can_jump_in_this_state = false

[node name="Crouch" type="Node" parent="FiniteStateMachine"]
script = ExtResource("9_84rn1")
can_jump_in_this_state = false
can_crouch_in_this_state = false

[node name="Mantle" type="Node" parent="FiniteStateMachine"]
unique_name_in_owner = true
script = ExtResource("18_433q2")

[node name="CanvasLayer" type="CanvasLayer" parent="."]
follow_viewport_enabled = true

[node name="Label2" type="Label" parent="CanvasLayer"]
unique_name_in_owner = true
offset_left = 77.0
offset_top = 505.0
offset_right = 216.0
offset_bottom = 575.0
text = "NTRCN TRNMCG"
label_settings = SubResource("LabelSettings_mm6q2")
horizontal_alignment = 2

[connection signal="shooted" from="Head/Camera/Gun" to="Head/Camera/ShakerComponent3D" method="play_shake"]
[connection signal="update_ledge" from="Climb" to="Climb" method="has_free_way"]
[connection signal="update_ledge" from="Climb" to="FiniteStateMachine/Mantle" method="get_mantle_point"]
[connection signal="timeout" from="FiniteStateMachine/Air/CoyoteTimer" to="FiniteStateMachine/Air" method="coyote_disable_jump"]
[connection signal="gun_down" from="FiniteStateMachine/Mantle" to="Head/Camera/Gun" method="mantle_start"]
[connection signal="gun_up" from="FiniteStateMachine/Mantle" to="Head/Camera/Gun" method="mantle_end"]
